Initial Klipper Configuration for Parrot 3D

--- a/Klipper/printer.cfg
+++ b/Klipper/printer.cfg
@@ -41,7 +41,7 @@ position_endstop: 0
 position_min: 0
 position_max: 250
 homing_speed: 40
-# homing_retract_dist: 5
+homing_retract_dist: 0
 
 [tmc2209 stepper_x]
 uart_pin: P1.10
@@ -54,7 +54,7 @@ diag_pin: P1.29
 #====================
 # Sensorless homing sensitive
 #====================
-driver_SGTHRS: 100
+driver_SGTHRS: 120
 
 #====================
 # Y-Axis Stepper
@@ -72,7 +72,7 @@ position_endstop: 0
 position_min: 0
 position_max: 210
 homing_speed: 40
-# homing_retract_dist: 5
+homing_retract_dist: 0
 
 [tmc2209 stepper_y]
 uart_pin: P1.9
@@ -85,7 +85,7 @@ diag_pin: P1.28
 #====================
 # Sensorless homing sensitive
 #====================
-driver_SGTHRS: 100
+driver_SGTHRS: 110
 
 #====================
 # Z-Axis Steppers
@@ -100,7 +100,7 @@ step_distance: .000625
 #====================
 endstop_pin: probe:z_virtual_endstop
 position_max: 220
-position_min: -1.0
+position_min: 0.0
 homing_speed: 5
 
 [tmc2209 stepper_z]
@@ -124,6 +124,14 @@ run_current: 0.500
 hold_current: 0.300
 interpolate: True
 stealthchop_threshold: 250
+
+[z_tilt]
+z_positions:
+    40,134.1
+    250,134.1
+points:
+    40,134.1
+    250,134.1
 
 #====================
 # thermistor values taken from
@@ -243,33 +251,21 @@ pin_up_reports_not_triggered: False
 pin_up_touch_mode_reports_triggered: False
 x_offset: -24.3
 y_offset: -34.1
-z_offset: 0.0
+z_offset: 1.7
 pin_move_time: 1
 
 [bed_mesh]
 speed: 150
 horizontal_move_z: 5
-mesh_min: 25,35.0
-mesh_max: 225.0,220
-probe_count: 6,6
+mesh_min: 5,10.0
+mesh_max: 221.7,165.9
+probe_count: 5,5
 mesh_pps: 2,2
 algorithm: lagrange
 # fade_start: 1
 # fade_end: 10
 # fade_target: 0
-
-[homing_override]
-gcode:
-    G90
-    G0 Z5 F500
-    G28 X0 Y0
-    G0 X125 Y100 F9000
-    G28 Z0
-    G0 Z5 F500
-axes: z
-set_position_x: 0
-set_position_y: 0
-set_position_z: 0
+relative_reference_index: 12
 
 # [safe_z_home]
 # home_xy_position: 125,105 # Change coordinates to the center of your print bed
@@ -313,6 +309,23 @@ aliases:
 ########################################
 # Macros
 ########################################
+
+[homing_override]
+axes: z
+set_position_z: 0
+gcode:
+    G90
+    G0 Z5 F500
+    G28 X0 Y0
+    G0 X149.3 Y134.1 F9000
+    G28 Z0
+    G0 Z5 F500
+
+[gcode_macro G29]
+gcode:
+    G28
+    G1 Z10 F600
+    BED_MESH_CALIBRATE
 
 [gcode_macro UNLOAD_FILAMENT]
 gcode:
