--- a/Klipper/printer.cfg
+++ b/Klipper/printer.cfg
@@ -15,8 +15,8 @@ max_accel: 4500
 max_z_velocity: 5
 max_z_accel: 1000
 
-[idle_timeout]
-timeout: 600
+# [idle_timeout]
+# timeout: 600
 
 ######################################################################
 # Stepper Setup
